<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/login_back">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/login_image" />

    <ProgressBar
        android:id="@+id/login_progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:drawableStart="@drawable/username"
        android:hint="@string/username"
        android:inputType="none|text"
        android:drawableLeft="@drawable/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/Login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_Registered" />


        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>