<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_doc"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD DOCTOR"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="75dp"
        android:textColor="#141414"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="143dp"
            android:layout_height="35dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/doc_email"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#141414"/>

        <EditText
            android:id="@+id/edittext_doc_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/textView_password"
            android:layout_width="143dp"
            android:layout_height="35dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#141414"/>

        <EditText
            android:id="@+id/edittext_doc_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="143dp"
            android:layout_height="35dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/doc_name"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#141414"/>

        <EditText
            android:id="@+id/edittext_doc_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_mobile_no"
            android:layout_width="143dp"
            android:layout_height="35dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/doc_mobile_no"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#141414"/>

        <EditText
            android:id="@+id/edittext_doc_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:inputType="number"
            android:phoneNumber="true"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_clinic_address"
            android:layout_width="143dp"
            android:layout_height="35dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/clinic_address"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#141414"/>

        <EditText
            android:id="@+id/edittext_clinic_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_category"
            android:layout_width="143dp"
            android:layout_height="35dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:text="@string/category"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#141414"/>

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#ffffff"
        android:text="@string/Submit"
        android:textSize="18dp"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:background="#ffffff"
        android:text="@string/back"
        android:textSize="18dp"/>

        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">




    </LinearLayout>




</LinearLayout>