<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin"
    android:orientation="vertical"
    android:background="@drawable/admin_login"
    android:gravity="center_horizontal"
    >

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/button"
        android:hint="@string/username"
        android:textAlignment="center"
        android:inputType="none|text"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/button"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_adminlogin"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="80dp"
        android:background="@drawable/button"
        android:text="@string/Login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    </LinearLayout>



</LinearLayout>