<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorLogin"
    android:background="#E0EEF5"
    android:orientation="vertical"
    android:gravity="center">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/dbutton" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edittext_user"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/username"
            android:hint="Email"
            android:inputType="none|text"
            android:drawableLeft="@drawable/username" />

        <EditText
            android:id="@+id/edittext_pass"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:drawableLeft="@drawable/password" />

        <Button
            android:id="@+id/button_doctorlogin"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="#ffffff"
            android:text="@string/Login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

        </LinearLayout>



</LinearLayout>